App Completed Successfully

--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -15,11 +15,11 @@
 
 <body class="flex-center">
 
-    <div id="starting" class="hidden">
+    <div id="starting" class="">
         <div id="start-button" class="shadow">Başlamak İçin Tıklayın!</div>
     </div>
 
-    <div id="questions" class="">
+    <div id="questions" class="hidden">
         <div class="card">
             <div class="card-header questions-header">
                 <h4 class="card-title" id="card-title-el"> </h4>
