Music Player App Completed

--- a/music-player/index.html
+++ b/music-player/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="sound-controls flex-center gap-2">
                     <i class="bi bi-volume-up-fill"></i>
-                    <input type="range" >
+                    <input type="range" id="music-volume-range" >
                 </div>
             </div>
 
